--- a/app/src/main/res/layout/popular_billiards.xml
+++ b/app/src/main/res/layout/popular_billiards.xml
@@ -8,9 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Popular Billiards"
-        android:textColor="@color/colorBlack"
-        android:textSize="16dp"
-        android:textStyle="bold" />
+        android:textSize="25dp"
+        android:textStyle="bold"
+        />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
