--- a/app/src/main/res/layout/expensive_billiards.xml
+++ b/app/src/main/res/layout/expensive_billiards.xml
@@ -25,7 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:text="expensive billiard 1"
-            android:textColor="@color/colorBlack" />
+            android:textColor="@color/colorBlack"
+            android:gravity="center"/>
 
     </LinearLayout>
 
@@ -50,7 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:text="expensive billiard 2"
-            android:textColor="@color/colorBlack" />
+            android:textColor="@color/colorBlack"
+            android:gravity="center"/>
 
     </LinearLayout>
 
@@ -75,7 +77,8 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:text="expensive billiard 3"
-            android:textColor="@color/colorBlack" />
+            android:textColor="@color/colorBlack"
+            android:gravity="center"/>
 
     </LinearLayout>
 
@@ -100,7 +103,8 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:text="expensive billiard 4"
-            android:textColor="@color/colorBlack" />
+            android:textColor="@color/colorBlack"
+            android:gravity="center"/>
 
     </LinearLayout>
 
@@ -125,7 +129,8 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:text="expensive billiard 5"
-            android:textColor="@color/colorBlack" />
+            android:textColor="@color/colorBlack"
+            android:gravity="center"/>
 
     </LinearLayout>
 
@@ -150,7 +155,8 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:text="expensive billiard 6"
-            android:textColor="@color/colorBlack" />
+            android:textColor="@color/colorBlack"
+            android:gravity="center"/>
 
     </LinearLayout>
 
