--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,6 +34,7 @@
             android:textStyle="bold"
             android:textSize="25dp"/>
         <include layout="@layout/place_home"/>
+        <include layout="@layout/footer"/>
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="60dp"
