--- a/app/src/main/res/layout/fragment_near_me.xml
+++ b/app/src/main/res/layout/fragment_near_me.xml
@@ -11,7 +11,64 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:orientation="horizontal">
+                <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/t_t_c"
+                    android:layout_gravity="center"
+                    android:textSize="10dp"/>
+                <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/t_t_c"
+                    android:layout_gravity="center"
+                    android:textSize="10dp"/>
+                <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/uy_t_n"
+                    android:layout_gravity="center"
+                    android:textSize="10dp"/>
+                <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/uy_t_n"
+                    android:layout_gravity="center"
+                    android:textSize="10dp"/>
+                <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/uy_t_n"
+                    android:layout_gravity="center"
+                    android:textSize="10dp"/>
+                <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:text="Thêm+"
+                    android:layout_gravity="center"
+                    android:textSize="10dp"/>
+            </LinearLayout>
+        </HorizontalScrollView>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorBlack"
+            />
     <include layout="@layout/near_me_list"/>
 
         <TextView
