--- a/app/src/main/res/layout/hot_deal_list.xml
+++ b/app/src/main/res/layout/hot_deal_list.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:columnCount="1"
     android:background="@color/colorGreen">
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="120dp"
