--- a/app/src/main/res/layout/collection_home.xml
+++ b/app/src/main/res/layout/collection_home.xml
@@ -14,6 +14,9 @@
         android:padding="4dp">
 
         <ImageView
+            android:clickable="true"
+            android:onClick="clicktoview"
+            android:id="@id/imgExpensive"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:layout_alignParentStart="true"
@@ -39,6 +42,9 @@
         android:padding="4dp">
 
         <ImageView
+            android:clickable="true"
+            android:onClick="clicktoview"
+            android:id="@id/imgExpensive"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:layout_alignParentStart="true"
@@ -64,6 +70,9 @@
         android:padding="4dp">
 
         <ImageView
+            android:clickable="true"
+            android:onClick="clicktoview"
+            android:id="@id/imgExpensive"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:layout_alignParentStart="true"
@@ -89,6 +98,9 @@
         android:padding="4dp">
 
         <ImageView
+            android:clickable="true"
+            android:onClick="clicktoview"
+            android:id="@id/imgExpensive"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:layout_alignParentStart="true"
@@ -114,6 +126,9 @@
         android:padding="4dp">
 
         <ImageView
+            android:clickable="true"
+            android:onClick="clicktoview"
+            android:id="@id/imgExpensive"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:layout_alignParentStart="true"
@@ -139,6 +154,9 @@
         android:padding="4dp">
 
         <ImageView
+            android:clickable="true"
+            android:onClick="clicktoview"
+            android:id="@id/imgExpensive"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:layout_alignParentStart="true"
