--- a/app/src/main/res/layout/diemdenuytin.xml
+++ b/app/src/main/res/layout/diemdenuytin.xml
@@ -11,7 +11,9 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_done_all_black_24dp"/>
+            android:src="@drawable/ic_done_all_black_24dp"
+            android:clickable="true"
+            android:onClick="clicktoview"/>
         <TextView
             android:layout_width="330dp"
             android:layout_height="50dp"
@@ -19,12 +21,17 @@
             android:textSize="20dp"
             android:gravity="center_vertical"
             android:textColor="@color/colorBlack"
+            android:clickable="true"
+            android:id="@id/txtDiemDenUyTin"
+            android:onClick="clickToviewListByTxt"
             />
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/ic_chevron_right_black_24dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:onClick="clicktoview"/>
 
     </LinearLayout>
     <View
@@ -40,7 +47,9 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_done_all_black_24dp"/>
+            android:src="@drawable/ic_done_all_black_24dp"
+            android:clickable="true"
+            android:onClick="clicktoview"/>
 
     <TextView
         android:textColor="@color/colorBlack"
@@ -49,12 +58,17 @@
         android:text="  Top ưu đãi chất lương"
         android:textSize="20dp"
         android:gravity="center_vertical"
+        android:clickable="true"
+        android:id="@id/txtDiemDenUyTin"
+        android:onClick="clickToviewListByTxt"
         />
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/ic_chevron_right_black_24dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:onClick="clicktoview"/>
 
     </LinearLayout>
 
@@ -71,7 +85,9 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_done_all_black_24dp"/>
+            android:src="@drawable/ic_done_all_black_24dp"
+            android:clickable="true"
+            android:onClick="clicktoview"/>
         <TextView
             android:textColor="@color/colorBlack"
             android:layout_width="330dp"
@@ -79,12 +95,17 @@
             android:text="  Top đặt chỗ nhiều"
             android:textSize="20dp"
             android:gravity="center_vertical"
+            android:clickable="true"
+            android:id="@+id/txtDiemDenUyTin"
+            android:onClick="clickToviewListByTxt"
             />
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/ic_chevron_right_black_24dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:onClick="clicktoview"/>
 
     </LinearLayout>
     <View
