--- a/app/src/main/res/layout/expensive_billiards.xml
+++ b/app/src/main/res/layout/expensive_billiards.xml
@@ -19,7 +19,10 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/expensive_billiard1" />
+            android:src="@drawable/expensive_billiard1"
+            android:id="@+id/imgExpensive"
+            android:clickable="true"
+            android:onClick="clicktoviewdetail"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -40,6 +43,9 @@
         android:padding="4dp">
 
         <ImageView
+            android:clickable="true"
+            android:onClick="clicktoviewdetail"
+            android:id="@id/imgExpensive"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_alignParentStart="true"
@@ -66,6 +72,9 @@
         android:padding="4dp">
 
         <ImageView
+            android:clickable="true"
+            android:onClick="clicktoviewdetail"
+            android:id="@id/imgExpensive"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_alignParentStart="true"
@@ -92,6 +101,9 @@
         android:padding="4dp">
 
         <ImageView
+            android:clickable="true"
+            android:onClick="clicktoviewdetail"
+            android:id="@id/imgExpensive"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_alignParentStart="true"
@@ -118,6 +130,9 @@
         android:padding="4dp">
 
         <ImageView
+            android:clickable="true"
+            android:onClick="clicktoviewdetail"
+            android:id="@id/imgExpensive"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_alignParentStart="true"
@@ -144,6 +159,9 @@
         android:padding="4dp">
 
         <ImageView
+            android:clickable="true"
+            android:onClick="clicktoviewdetail"
+            android:id="@id/imgExpensive"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_alignParentStart="true"
