--- a/app/src/main/res/layout/fragment_hot_deal.xml
+++ b/app/src/main/res/layout/fragment_hot_deal.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/hot_deal_list"/>
+        <include layout="@layout/near_me_list"/>
 
     </LinearLayout>
 
