--- a/app/src/main/res/layout/place_home.xml
+++ b/app/src/main/res/layout/place_home.xml
@@ -4,7 +4,6 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:stretchColumns="*">
-
                 <TableRow android:layout_height="50dp">
                         <com.google.android.material.button.MaterialButton android:text="Ha Noi"
                             android:layout_height="50dp"
@@ -13,9 +12,13 @@
                             android:textColor="@color/colorRed"
                             android:backgroundTint="@color/colorWhite"
                             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                            app:strokeWidth="3dp"/>
+                            app:strokeWidth="3dp"
+                            android:id="@+id/btnPlaceChallenge"
+                            android:onClick="clickToViewList"/>
                         <com.google.android.material.button.MaterialButton android:text="Hue"
                             android:layout_height="50dp"
+                            android:id="@id/btnPlaceChallenge"
+                            android:onClick="clickToViewList"
                             android:background="@color/colorWhite"
                             android:layout_marginRight="5dp"
                             android:textColor="@color/colorRed"
@@ -25,6 +28,8 @@
                         <com.google.android.material.button.MaterialButton android:text="Da Nang"
                             android:background="@color/colorWhite"
                             android:layout_height="50dp"
+                            android:id="@id/btnPlaceChallenge"
+                            android:onClick="clickToViewList"
                             android:layout_marginRight="5dp"
                             android:textColor="@color/colorRed"
                             android:backgroundTint="@color/colorWhite"
@@ -37,6 +42,8 @@
                         <com.google.android.material.button.MaterialButton android:text="TP HCM"
                             android:background="@color/colorWhite"
                             android:layout_height="50dp"
+                            android:id="@id/btnPlaceChallenge"
+                            android:onClick="clickToViewList"
                             android:layout_marginRight="5dp"
                             android:layout_marginLeft="5dp"
                             android:textColor="@color/colorRed"
@@ -46,6 +53,8 @@
                         <com.google.android.material.button.MaterialButton android:text="Binh Duong"
                             android:layout_height="50dp"
                             android:layout_marginRight="5dp"
+                            android:id="@id/btnPlaceChallenge"
+                            android:onClick="clickToViewList"
                             android:background="@color/colorWhite"
                             android:textColor="@color/colorRed"
                             android:backgroundTint="@color/colorWhite"
@@ -54,6 +63,8 @@
                         <com.google.android.material.button.MaterialButton android:text="Da Lat"
                             android:layout_height="50dp"
                             android:layout_marginRight="5dp"
+                            android:id="@id/btnPlaceChallenge"
+                            android:onClick="clickToViewList"
                             android:textColor="@color/colorRed"
                             android:backgroundTint="@color/colorWhite"
                             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
@@ -65,6 +76,8 @@
                             android:text="Ca Mau"
                             android:layout_height="50dp"
                             android:layout_marginRight="5dp"
+                            android:id="@id/btnPlaceChallenge"
+                            android:onClick="clickToViewList"
                             android:layout_marginLeft="5dp"
                             android:textColor="@color/colorRed"
                             android:backgroundTint="@color/colorWhite"
@@ -75,6 +88,8 @@
                             android:layout_height="50dp"
                             android:background="@color/colorWhite"
                             android:layout_marginRight="5dp"
+                            android:id="@id/btnPlaceChallenge"
+                            android:onClick="clickToViewList"
                             android:textColor="@color/colorRed"
                             android:backgroundTint="@color/colorWhite"
                             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
@@ -83,6 +98,8 @@
                     android:background="@color/colorWhite"
                     android:layout_height="50dp"
                     android:layout_marginRight="5dp"
+                    android:id="@id/btnPlaceChallenge"
+                    android:onClick="clickToViewList"
                     android:textColor="@color/colorRed"
                     android:backgroundTint="@color/colorWhite"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
@@ -94,6 +111,8 @@
                     android:layout_height="50dp"
                     android:layout_marginRight="5dp"
                     android:layout_marginLeft="5dp"
+                    android:id="@id/btnPlaceChallenge"
+                    android:onClick="clickToViewList"
                     android:textColor="@color/colorRed"
                     android:backgroundTint="@color/colorWhite"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
@@ -102,6 +121,8 @@
                     android:text="Kien Giang"
                     android:layout_height="50dp"
                     android:background="@color/colorWhite"
+                    android:id="@id/btnPlaceChallenge"
+                    android:onClick="clickToViewList"
                     android:layout_marginRight="5dp"
                     android:textColor="@color/colorRed"
                     android:backgroundTint="@color/colorWhite"
@@ -113,6 +134,8 @@
                     android:background="@color/colorWhite"
                     android:layout_height="50dp"
                     android:layout_marginRight="5dp"
+                    android:id="@id/btnPlaceChallenge"
+                    android:onClick="clickToViewList"
                     android:textColor="@color/colorRed"
                     android:backgroundTint="@color/colorWhite"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
