--- a/app/src/main/res/layout/popular_billiards.xml
+++ b/app/src/main/res/layout/popular_billiards.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Popular Billiards"
+        android:text="Mạng lưới các tiệm Billiard"
         android:textSize="25dp"
         android:textStyle="bold"
         />
@@ -32,12 +33,15 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/btnPopular"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/billiard1" />
+                        android:src="@drawable/billiard1"
+                        android:clickable="true"
+                        android:onClick="clicktoview"/>
 
                     <TextView
                         android:layout_width="match_parent"
@@ -61,12 +65,15 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@id/btnPopular"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/billiard2" />
+                        android:src="@drawable/billiard2"
+                        android:clickable="true"
+                        android:onClick="clicktoview"/>
 
                     <TextView
                         android:layout_width="match_parent"
@@ -90,12 +97,15 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@id/btnPopular"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/billiard3" />
+                        android:src="@drawable/billiard3"
+                        android:clickable="true"
+                        android:onClick="clicktoview"/>
 
                     <TextView
                         android:layout_width="match_parent"
@@ -124,7 +134,10 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/billiard4" />
+                        android:src="@drawable/billiard4"
+                        android:clickable="true"
+                        android:onClick="clicktoview"
+                        android:id="@id/btnPopular"/>
 
                     <TextView
                         android:layout_width="match_parent"
