--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorWhite">#fafafa</color>
     <color name="colorGreen">#dcedc8</color>
     <color name="colorRed">#d50000</color>
+    <color name="colorXam">#e0e0e0</color>
 </resources>
