--- a/app/src/main/res/layout/popular_billiards.xml
+++ b/app/src/main/res/layout/popular_billiards.xml
@@ -3,19 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="10dp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Mạng lưới các tiệm Billiard"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="160dp"
         android:scrollbars="none">
 
         <LinearLayout
@@ -42,13 +36,25 @@
                         android:src="@drawable/billiard1"
                         android:clickable="true"
                         android:onClick="clicktoview"/>
-
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:text="billiard1"
-                        android:textColor="@color/colorBlack" />
-
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Billiard HCI Assignment -\nQuận 12 Tô Ký"
+                            android:textColor="@color/colorBlack"
+                            android:gravity="center" />
+                        <TextView
+                            android:paddingTop="4dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Đặt bàn HCI ưu đãi đến 20%"
+                            android:textColor="@color/colorRed"
+                            android:textSize="10dp"
+                            android:gravity="center"/>
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -75,11 +81,25 @@
                         android:clickable="true"
                         android:onClick="clicktoview"/>
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:text="billiard2"
-                        android:textColor="@color/colorBlack" />
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Billiard HCI Assignment -\nQuận 12 Tô Ký"
+                            android:textColor="@color/colorBlack"
+                            android:gravity="center" />
+                        <TextView
+                            android:paddingTop="4dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Đặt bàn HCI ưu đãi đến 20%"
+                            android:textColor="@color/colorRed"
+                            android:textSize="10dp"
+                            android:gravity="center"/>
+                    </LinearLayout>
 
 
                 </LinearLayout>
@@ -103,15 +123,29 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/billiard3"
+                        android:src="@drawable/billiard1"
                         android:clickable="true"
                         android:onClick="clicktoview"/>
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:text="billiard3"
-                        android:textColor="@color/colorBlack" />
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Billiard HCI Assignment -\nQuận 12 Tô Ký"
+                            android:textColor="@color/colorBlack"
+                            android:gravity="center" />
+                        <TextView
+                            android:paddingTop="4dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Đặt bàn HCI ưu đãi đến 20%"
+                            android:textColor="@color/colorRed"
+                            android:textSize="10dp"
+                            android:gravity="center"/>
+                    </LinearLayout>
 
 
                 </LinearLayout>
@@ -139,11 +173,25 @@
                         android:onClick="clicktoview"
                         android:id="@id/btnPopular"/>
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:text="billiard4"
-                        android:textColor="@color/colorBlack" />
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Billiard HCI Assignment -\nQuận 12 Tô Ký"
+                            android:textColor="@color/colorBlack"
+                            android:gravity="center" />
+                        <TextView
+                            android:paddingTop="4dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Đặt bàn HCI ưu đãi đến 20%"
+                            android:textColor="@color/colorRed"
+                            android:textSize="10dp"
+                            android:gravity="center"/>
+                    </LinearLayout>
 
 
                 </LinearLayout>
